# sumsum

./: README.md  pyproject.toml
src/sum_sum/: main.py
src/sumsum/: __init__.py  main.py
