[project]
name = "sumsum"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "AK3847", email = "abdulkadir.co21d2@scet.ac.in" }
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sumsum"]
